Renamed portfolio files to index.html, index.css, index.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lekhya | Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-  <link rel="stylesheet" href="portfolio.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <header>
@@ -370,6 +370,6 @@
     <p>&copy; 2025 Lekhya. All rights reserved.</p>
   </footer>
 
-  <script src="portfolio.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
